  - Support refresh Ansible playbook-with-different-name from another blueprint using deployment update.
  - Pin Ansible version to latest stable.

2.8.0:
  - Support playbook from URL and added reload playbook workflow.

2.8.1:
  - Use shared resource downloader from cloudify-utilities-sdk.
  - Fix upload blueprint to 4.5.5

2.8.2:
  - Handle private key logging.

2.9.0:
  - Add additional parameters(can be also passed by additional_args in old plugin versions): start_at_task, timeout and etc.

2.9.1:
  - Fix Bug introduced by plugin yaml changes in 2.9.1

2.9.2:
  - Update wagon builder to py2py3 wagon and add rhel wagon builder.
  - Added 5.1.0 manager integration tests.

2.9.3:
  - Support global visibility blueprints.
  - Support existing inventory file.

2.9.4:
  - fix build issue

2.10.0:
  - Controller run each playbook in different venv.

2.10.1:
  - Fix bug of multi tenancy, if working offline use the plugin venv ansible-playbook executable and can't use "extra_packages".
2.11.0:
  - RD-469: Send JSON event to event log during execution.
  - RD-1610: Step through Ansible Tags.
2.11.1:
  - RD-2429: Permit no source on store facts.
2.12.0:
  - Add number_of_attempts property for playbooks executions.
2.12.1:
  - Install Ansible in deployment venv from wheel URL.
2.13.0:
  - RD-3031 Add Galaxy Collections Install.
2.13.1:
  - Enable suppressing some logs.
2.13.2:
  - Use general executor.
2.13.3:
  - Handle issue in install, where a relationship is used to create the ansible env and can break the deployment.
2.13.4:
  - Rerelease of 2.13.3 to distribute aarch64 wagon.
2.13.5:
  - Add Executor node type reload support.
2.13.6:
 - RD-3926 Validate parameters for ansible and ansible-playbook commands.
 - RD-3926 Fix store facts from kwargs
2.13.7: Update utilities SDK for PYYAML 6
2.13.8: Solve node instance version conflicts.
2.13.9:
  - RD-4902 provide parameters for Ansible reload workflow
  - Add v2_plugin.yaml
  - Add Node_Instance_Ids and Node_Ids type.